--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,5 @@ coverage/
 
 # Ignore client secret file
 client_secret_286034055187-obobc9opadhrimr9ls3tb7ohssh3psse.apps.googleusercontent.com.json
+
+#pip install --q -r  requirements.txt --cache-dir .cache 
