--- a/.gitignore
+++ b/.gitignore
@@ -36,4 +36,11 @@ coverage/
 # Ignore client secret file
 client_secret_286034055187-obobc9opadhrimr9ls3tb7ohssh3psse.apps.googleusercontent.com.json
 
+# Media files
+media/
+!media/.gitkeep
+
+# Except default images
+!media/default.png
+
 #pip install --q -r  requirements.txt --cache-dir .cache 
